--- a/client/src/views/AllListings.css
+++ b/client/src/views/AllListings.css
@@ -1,21 +1,22 @@
 #module {
-    width: 100% !important;
+    font-size: 1rem;
+    line-height: 1.5;
   }
   
-  #module p.collapse[aria-expanded="false"] {
-      display: block;
-      height: 40px !important;
-      overflow: hidden;
+  #module #collapseExample.collapse:not(.show) {
+    display: block;
+    height: 3rem;
+    overflow: hidden;
   }
   
-  #module p.collapsing[aria-expanded="false"] {
-      height: 40px !important;
+  #module #collapseExample.collapsing {
+    height: 3rem;
   }
   
-  #module a.collapsed:after  {
-      content: '+ Show More';
+  #module a.collapsed:after {
+    content: '+ Show More';
   }
   
   #module a:not(.collapsed):after {
-      content: '- Show Less';
+    content: '- Show Less';
   }
